Incorporating reviewer comments

--- a/all.bib
+++ b/all.bib
@@ -2761,3 +2761,17 @@ isbn="978-3-642-11970-5"
 	year = {2021}
 }
 
+@InProceedings{sledge,
+author="Blanchette, Jasmin Christian
+and B{\"o}hme, Sascha
+and Paulson, Lawrence C.",
+editor="Bj{\o}rner, Nikolaj
+and Sofronie-Stokkermans, Viorica",
+title="Extending Sledgehammer with SMT Solvers",
+booktitle="Automated Deduction -- CADE-23",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="116--130",
+isbn="978-3-642-22438-6"
+}
