--- a/git-semantics.tex
+++ b/git-semantics.tex
@@ -26,11 +26,11 @@
 {
   b\in dom(H)\spc
   v\not\in V\spc
-  c\not\in codom(C)
+  i\not\in codom(C)
 }
 {
   ((V,E),N,C,H,L) \stepsto (V \cup \{v\},\, E\cup\{H(b) \cedge v\},\,
-  N[v \mapsto n],\,C[v \mapsto \{c\} \cup C(H(b))],\, H[b \mapsto v], L)
+  N[v \mapsto n],\,C[v \mapsto \{i\} \cup C(H(b))],\, H[b \mapsto v], L)
 }
 \spc
   [\rulelabel{Commit}]
