--- a/quark.tex
+++ b/quark.tex
@@ -1,6 +1,6 @@
 %% For double-blind review submission, w/o CCS and ACM Reference (max submission space)
-\documentclass[sigplan,10pt,review,anonymous]{acmart}
-\settopmatter{printfolios=true,printccs=false,printacmref=false}
+\documentclass[sigplan,screen]{acmart}
+%\settopmatter{printfolios=true,printccs=false,printacmref=false}
 %% For final camera-ready submission, w/ required CCS and ACM Reference
 %\documentclass[acmsmall]{acmart}\settopmatter{}
 
@@ -36,14 +36,15 @@
 %% Journal information
 %% Supplied to authors by publisher for camera-ready submission;
 %% use defaults for review submission.
-\acmJournal{PACMPL}
-\acmVolume{1}
-\acmNumber{POPL} % CONF = POPL or ICFP or OOPSLA
-\acmArticle{1}
-\acmYear{2022}
-\acmMonth{1}
-\acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
-\startPage{1}
+%%\acmJournal{PACMPL}
+%%\acmVolume{1}
+%%\acmNumber{POPL} % CONF = POPL or ICFP or OOPSLA
+%%\acmArticle{1}
+%%\acmYear{2022}
+%%\acmMonth{1}
+%%\acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
+%%\startPage{1}
+\acmConference[PLDI]{ACM Conference}{June 2022}{San Diego, USA}%
 
 %% Copyright information
 %% Supplied to authors (based on authors' rights management selection;
@@ -97,56 +98,60 @@
 %% extraction tools.
 
 %% Author with single affiliation.
-\author{First1 Last1}
-\authornote{with author1 note}          %% \authornote is optional;
+\author{Gowtham Kaki}
+%\authornote{with author1 note}          %% \authornote is optional;
                                         %% can be repeated if necessary
-\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+%\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \position{Position1}
-  \department{Department1}              %% \department is recommended
-  \institution{Institution1}            %% \institution is required
-  \streetaddress{Street1 Address1}
-  \city{City1}
-  \state{State1}
-  \postcode{Post-Code1}
-  \country{Country1}                    %% \country is recommended
+%  \position{Position1}
+%  \department{Department1}              %% \department is recommended
+  \institution{University of Colorado Boulder}            %% \institution is required
+%  \streetaddress{Street1 Address1}
+%  \city{City1}
+%  \state{State1}
+%  \postcode{Post-Code1}
+  \country{USA}                    %% \country is recommended
 }
-\email{first1.last1@inst1.edu}          %% \email is recommended
+%\email{first1.last1@inst1.edu}          %% \email is recommended
 
-%% Author with two affiliations and emails.
-\author{First2 Last2}
-\authornote{with author2 note}          %% \authornote is optional;
+%% Second Author
+\author{Prasanth Prahladan}
+%\authornote{with author2 note}          %% \authornote is optional;
                                         %% can be repeated if necessary
-\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+%\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \position{Position2a}
-  \department{Department2a}             %% \department is recommended
-  \institution{Institution2a}           %% \institution is required
-  \streetaddress{Street2a Address2a}
-  \city{City2a}
-  \state{State2a}
-  \postcode{Post-Code2a}
-  \country{Country2a}                   %% \country is recommended
+%  \position{Position2a}
+%  \department{Department2a}             %% \department is recommended
+  \institution{University of Colorado Boulder}           %% \institution is required
+%  \streetaddress{Street2a Address2a}
+%  \city{City2a}
+%  \state{State2a}
+%  \postcode{Post-Code2a}
+  \country{USA}                   %% \country is recommended
 }
-\email{first2.last2@inst2a.com}         %% \email is recommended
-\affiliation{
-  \position{Position2b}
-  \department{Department2b}             %% \department is recommended
-  \institution{Institution2b}           %% \institution is required
-  \streetaddress{Street3b Address2b}
-  \city{City2b}
-  \state{State2b}
-  \postcode{Post-Code2b}
-  \country{Country2b}                   %% \country is recommended
-}
-\email{first2.last2@inst2b.org}         %% \email is recommended
+%\email{first2.last2@inst2a.com}         %% \email is recommended
 
+%% Third Author
+\author{Nicholas Lewchenko}
+%\authornote{with author2 note}          %% \authornote is optional;
+                                        %% can be repeated if necessary
+%\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+\affiliation{
+%  \position{Position2a}
+%  \department{Department2a}             %% \department is recommended
+  \institution{University of Colorado Boulder}           %% \institution is required
+%  \streetaddress{Street2a Address2a}
+%  \city{City2a}
+%  \state{State2a}
+%  \postcode{Post-Code2a}
+  \country{USA}                   %% \country is recommended
+}
+%
 
 %% Abstract
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-
   We propose a runtime-assisted approach to enforce convergence in
   distributed executions of replicated data types. The key
   distinguishing aspect of our approach is that it guarantees
@@ -159,10 +164,12 @@
   The novel component of our approach is a distributed runtime that
   orchestrates \emph{well-formed } executions that are guaranteed to
   converge. Despite the utilization of a runtime, our approach comes
-  at no additional cost of latency and availability. We implement our
-  approach in a system called \quark and conduct a thorough evaluation
-  of its performance over a large-scale collaborative editing
-  application. 
+  at no additional cost of latency and availability. Instead, we
+  introduce a novel tradeoff against a metric called \emph{staleness},
+  which roughly corresponds to the time taken for replicas to
+  converge. We implement our approach in a system called \quark and
+  conduct a thorough evaluation of its tradeoffs in the context of two
+  case studies.
 \end{abstract}
 
 
@@ -171,26 +178,33 @@
 \begin{CCSXML}
 <ccs2012>
 <concept>
-<concept_id>10011007.10011006.10011008</concept_id>
-<concept_desc>Software and its engineering~General programming languages</concept_desc>
+<concept_id>10010147.10010919.10010177</concept_id>
+<concept_desc>Computing methodologies~Distributed programming languages</concept_desc>
 <concept_significance>500</concept_significance>
 </concept>
 <concept>
-<concept_id>10003456.10003457.10003521.10003525</concept_id>
-<concept_desc>Social and professional topics~History of programming languages</concept_desc>
+<concept_id>10010520.10010575.10010578</concept_id>
+<concept_desc>Computer systems organization~Availability</concept_desc>
+<concept_significance>500</concept_significance>
+</concept>
+<concept>
+<concept_id>10011007.10011074.10011099.10011692</concept_id>
+<concept_desc>Software and its engineering~Formal software verification</concept_desc>
 <concept_significance>300</concept_significance>
 </concept>
 </ccs2012>
 \end{CCSXML}
 
-\ccsdesc[500]{Software and its engineering~General programming languages}
-\ccsdesc[300]{Social and professional topics~History of programming languages}
+\ccsdesc[500]{Computing methodologies~Distributed programming languages}
+\ccsdesc[500]{Computer systems organization~Availability}
+\ccsdesc[300]{Software and its engineering~Formal software verification}
 %% End of generated code
 
 
 %% Keywords
 %% comma separated list
-\keywords{keyword1, keyword2, keyword3}  %% \keywords are mandatory in final camera-ready submission
+\keywords{Replication, MRDT, CRDT, Runtime, Convergence, Collaborative
+Editing}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
@@ -217,21 +231,13 @@
 \bibliography{all}
 
 %% Acknowledgments
-\begin{acks}                            %% acks environment is optional
+%\begin{acks}                            %% acks environment is optional
                                         %% contents suppressed with 'anonymous'
   %% Commands \grantsponsor{<sponsorID>}{<name>}{<url>} and
   %% \grantnum[<url>]{<sponsorID>}{<number>} should be used to
   %% acknowledge financial support and will be used by metadata
   %% extraction tools.
-  This material is based upon work supported by the
-  \grantsponsor{GS100000001}{National Science
-    Foundation}{http://dx.doi.org/10.13039/100000001} under Grant
-  No.~\grantnum{GS100000001}{nnnnnnn} and Grant
-  No.~\grantnum{GS100000001}{mmmmmmm}.  Any opinions, findings, and
-  conclusions or recommendations expressed in this material are those
-  of the author and do not necessarily reflect the views of the
-  National Science Foundation.
-\end{acks}
+%\end{acks}
 
 
 %% Bibliography
